--- a/src/components/styles/CalculatorInput.css
+++ b/src/components/styles/CalculatorInput.css
@@ -1,4 +1,5 @@
 .input-container {
+  position: relative;
   display: flex;
   width: 320px;
 }
@@ -19,9 +20,9 @@
 }
 
 .modal {
-  position: fixed; 
-  left: 0;
-  top: 0;
+  position: fixed;
+  top:0;
+  left:0;
   width: 100%; 
   height: 100%;
   overflow: auto; 
@@ -30,7 +31,8 @@
 }
 
 .modal-content {
-  position:absolute;
+  border:1px solid black;
+  position: relative;
   top:10px;
   left:320px;
 }
